add API: check product availability
