# products-backend/api.yaml
@@ -88,7 +88,40 @@ paths:
           $ref: "#/components/responses/Unauthorized"
         "403":
           $ref: "#/components/responses/Forbidden"
-  
+  /products/check-availability:
+    get:
+      tags:
+        - Products
+      summary: Get product availability
+      parameters:
+        - name: product_id
+          in: query
+          description: ID of product to check
+          required: true
+          schema:
+            type: integer
+        - name: quantity
+          in: query
+          description: Quantity of product to check
+          required: true
+          schema:
+            type: integer
+      responses:
+        "200":
+          description: Successful response
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  success: true
+                  status: 200
+                  message: check availability products successfully
+                  data:
+                    product_id: 1
+                    available: true
+                    quantity: 1
+
 components:
   schemas:
     Ping:
