# products-backend/src/domain/products/products.model.ts
@@ -13,6 +13,12 @@ export interface ProductAvailabilityRequest {
   quantity: number;
 }
 
+export interface checkAvailabilityProductsResponse {
+  product_id: number;
+  available: boolean;
+  quantity: number;
+}
+
 export interface ProductReduceStockRequest {
   product_id: number;
   quantity: number;
