# products-backend/src/domain/products/products.route.ts
@@ -7,5 +7,6 @@ const router = Router();
 
 // router.post("/", auth, productsController.create);
 router.post("/", productsController.create);
+router.get("/check-availability", productsController.checkAvailability);
 
 export default router;
